<resources>
    <string name="app_name">CareTracker</string>
    <string name="image_display">image display</string>
    <string name="take_a_picture">take a picture</string>
    <string name="server_client_id">148905310426-e3h28vqnj6nu4p6ig5gg060ed3l4p4mr.apps.googleusercontent.com</string>
    <string name="value_input_option">RAW</string>
    <string name="label_hint">Enter a name for the entry</string>
    <string name="tag_color"> </string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="action_add">Add new entry</string>
    <string name="title_add_button">New Entry Button</string>
    <string name="descrip_hint">Provide a description for the entry</string>
    <string name="color_contentdesc">button color</string>
    <string name="title_newAction">New Action</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_event">Event Report</string>
    <string name="add_photo">Add Photo (optional)</string>
    <string name="expense_total">Total(optional)</string>
    <string name="expense_total_hint">Enter Total</string>
    <string name="label">Entry</string>
    <string name="description">Entry Details</string>
    <string name="commTitle">Client Communication</string>
    <string name="toClientLabel">Communication TO client</string>
    <string name="toClientLabelHint">Enter what <u>you said</u> to the client</string>
    <string name="fromClientLabel">Communication FROM client</string>
    <string name="fromClientLabelHint">Enter what the <u>client said</u> to you</string>
    <string name="sign_out">Sign out</string>
    <string name="btn_delete">Delete</string>
    <string name="title_modify">Modify Entry Button</string>
    <string name="textview">TextView</string>
    <string name="cameraTitle">Receipt</string>
    <string name="image_preview">Preview</string>
    <string name="main_showcase">Automate sending reports to Christina by tapping a button you have created</string>
    <string name="add_showcase">Add a button by clicking the plus icon. You will be allowed to decide what information is sent when the button is tapped.</string>
    <string name="button_showcase">Once created, tap on a button to send its associated information to Christina.</string>
    <string name="modify_showcase">Press and hold down on a button to access the modify screen.  You can change the name, the information that will be sent, the color, or even delete the button by accessing the modify screen.</string>
    <string name="convo_showcase">Client Communication will allow you to log conversations with the client.</string>
    <string name="event_showcase">Add note will allow you to submit information about special events. You can send one-time events and even take a picture to send with the report.</string>
    <string name="about_text">This app was created by Sara Olivero, Scott Tolman and Pedro Lago.  It is designed to help Christina\'s co-workers to send reports about their interactions with the client.</string>
</resources>
