<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cs246.sara.caretrackerapp.Expense">


    <TextView
        android:id="@+id/expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_expense"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/enterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/editLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_hint"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/expenseDescription"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:ems="10"
        android:hint="@string/descrip_hint"
        android:inputType="textPersonName"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/photoLayout"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expense_total"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/enterTotal"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/expense_total_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/okExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>
