<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="cs246.sara.caretrackerapp.ConversationActivity">

    <TextView
        android:id="@+id/commToClient"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toClientLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/cTOclient"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/toClientLabelHint"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <TextView
        android:id="@+id/commFromClient"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fromClientLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/cFROMclient"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/fromClientLabelHint"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelComm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelListener"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@color/colorGreen0"
            android:background="@android:color/transparent"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/okComm"
            android:onClick="onOkClick"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorGreen0"
            android:background="@android:color/transparent"
            android:text="@string/btn_ok" />
    </LinearLayout>
</LinearLayout>
