<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="cs246.sara.caretrackerapp.ModifyButtonActivity">

    <RelativeLayout
        android:id="@+id/layout_new_button0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="48sp">

        <include layout="@layout/create_button"/>

        <LinearLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_newBtn"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ok"
            android:onClick="onOkListener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_ok"
            android:textSize="20sp"
            android:textColor="@color/colorGreen0"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/btn_cancel"
            android:onClick="onCancelListener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_ok"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_cancel"
            android:textSize="20sp"
            android:textColor="@color/colorGreen0"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_delete"
            android:onClick="onDeleteListener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:textSize="20sp"
            android:textColor="@color/colorGreen0"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</RelativeLayout>
